# ident

./: Cargo.toml  justfile
proptest-regressions/: lib.txt
src/: lib.rs  serde.rs
